fix(ci): configure ESLint for Next.js 16 which removed next lint
- Why: Next.js 16 dropped the `next lint` subcommand, causing CI failure
- What: install eslint + eslint-config-next, create eslint.config.mjs
  with native flat config, change lint script to `eslint .`
- Impact: CI lint step now passes; strict React 19 rules downgraded
  to warnings for pre-existing issues in frontend components

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "prisma generate",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -95,6 +95,8 @@
     "@types/react-dom": "^19.2.3",
     "@vitest/coverage-v8": "^4.0.18",
     "dotenv": "^17.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "prisma": "^7.3.0",
     "tailwindcss": "4.1.12",
     "tsx": "^4.21.0",
