fix(deploy): reduce cron frequency to 1x/day for Hobby plan
Why:
- Vercel Hobby plan limits cron jobs to once per day maximum
- Previous 6-hour schedule caused deployment failures

What:
- Change cleanup-rate-limits cron from '0 */6 * * *' to '0 0 * * *'

Impact:
- Fixes Vercel deployment on Hobby plan

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/v1/cron/cleanup-rate-limits",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
