--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
     "jose": "^6.1.3",
+    "jspdf": "^4.1.0",
     "lucide-react": "0.487.0",
     "motion": "12.23.24",
     "next": "latest",
